# Timestamp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  timer.cpp
.github/workflows/: ci.yml
include/: base_timer.hpp  high_res_timer.hpp  logger.hpp  timer.hpp  utils.hpp
src/: base_timer.cpp  high_res_timer.cpp  logger.cpp  main.cpp  timer.cpp  utils.cpp
