cmake_minimum_required(VERSION 3.10)

PROJECT(TimestampProject)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set output directory to project root for all platforms and configurations
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR})

# Include directories
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# Source files
SET(SOURCES
    src/main.cpp
    src/timer.cpp
    src/logger.cpp
)

# Create executable
ADD_EXECUTABLE(timer ${SOURCES})

# Set target properties
SET_TARGET_PROPERTIES(timer PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}
)
